--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,10 @@ html {
 
 main {
     display: flex;
+    height: 100vh;
 }
 
 .sidebar {
-    height: 100vh;
+    width: 30vw;
+    height: 100%;
 }
