Fixed the form validation

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,9 @@ html {
 }
 
 main {
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 8fr;
+    grid-template-areas: "sidebar content";
     height: 100vh;
 }
 
