--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,23 @@ main {
     background-color: rgb(30, 30, 30);
 }
 
+.sidebar-header {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    gap: 10px;
+}
+
+.sidebar-header a {
+    text-decoration: none;
+    color: gray;
+}
+
+
+.sidebar-header a:hover {
+    text-decoration: underline;
+}
+
 .sidebar-content {
     display: flex;
     flex-direction: column;
@@ -34,6 +51,7 @@ main {
     display: flex;
     align-items: center;
     gap: 20px;
+    padding: 15px;
 }
 
 .project-buttons-container {
