--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,6 @@ main {
     color: gray;
 }
 
-
 .sidebar-header a:hover {
     text-decoration: underline;
 }
@@ -40,6 +39,13 @@ main {
 .sidebar-content {
     display: flex;
     flex-direction: column;
+}
+
+.sidebar-footer {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    padding: 20px;
 }
 
 .content {
