--- a/src/styles.css
+++ b/src/styles.css
@@ -40,8 +40,6 @@ button:hover {
     cursor: pointer;
 }
 
-
-
 .add-project-btn, .add-task-btn {
     background-color: darkgray;
     width: 200px;
@@ -54,6 +52,12 @@ button:hover {
     background-color: rgb(64, 64, 64);
     border-color: gray;
     color: var(--custom-white);
+}
+
+.add-task-btn {
+    position: absolute;
+    bottom: 0;
+    margin: 20px;
 }
 
 .add-task-btn:hover {
@@ -113,12 +117,14 @@ button:hover {
 .content h2 {
     color: var(--custom-white);
     font-family: "Special-Font", Arial, Helvetica, sans-serif;
+    text-decoration: underline;
 }
 
 .project-container {
     display: flex;
     /* flex-wrap: wrap; */
     align-items: center;
+    justify-content: space-between;
     gap: 20px;
     padding-left: 15px;
     border: 1px solid darkgray;
