--- a/src/styles.css
+++ b/src/styles.css
@@ -94,12 +94,55 @@ button:hover {
     transition: transform 0.3s ease;
 }
 
+.hamburger-icon::before,
+.hamburger-icon::after {
+    content: "";
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    position: absolute;
+    left: 0;
+    transition: transform 0.3s ease;
+}
+
+.hamburger-icon::before {
+    top: -8px;
+}
+
+.hamburger-icon::after {
+    top: 8px;
+}
+
 .sidebar {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    grid-area: sidebar;
     height: 100vh;
-    background-color: rgb(30, 30, 30);
+    background-color: rgb(30, 30, 30); */
+    
+    background-color: rgb(30, 30, 30); 
+    color: var(--custom-white);
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    padding-top: 60px;
+    grid-area: sidebar;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    
+}
+
+.sidebar.visible {
+    transform: translateX(0);
+}
+
+.sidebar .hidden {
+    transform: translateX(-100%);
+}
+
+#hamburger-btn.active .hamburger-icon {
+    transform: rotate(45deg);
 }
 
 .sidebar-header {
