--- a/src/styles.css
+++ b/src/styles.css
@@ -75,6 +75,7 @@ button:hover {
 .form-section {
     display: flex;
     flex-direction: column;
+    gap: 2px;
 }
 
 header {
@@ -151,14 +152,29 @@ header {
     background: rgb(30, 30, 30);
     color: var(--custom-white);
     border: 1px solid rgb(48, 47, 47);
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(146, 143, 143, 0.2);
+    padding: 1rem;
+    width: 300px;
+    border-radius: 8px;
     z-index: 1000;
 }
 
 .new-project-dialog::backdrop {
     background-color: rgba(0, 0, 0, 0.574);
+}
+
+.add-project-form {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+#projectName {
+    padding: 4px 6px;
+    width: 100%;
+    border: 1px solid #cacaca;
+    border-radius: 6px;
+    font-size: 13px;
 }
 
 .new-task-dialog {
@@ -167,9 +183,10 @@ header {
     background: white;
     border: 1px solid #ccc;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    border-radius: 5px;
+    padding: 1rem;
+    border-radius: 8px;
     z-index: 1000;
+    margin-top: 8px;
 }
 
 .new-task-dialog::backdrop {
