--- a/src/styles.css
+++ b/src/styles.css
@@ -154,7 +154,7 @@ header {
     border: 1px solid rgb(48, 47, 47);
     box-shadow: 0px 4px 8px rgba(146, 143, 143, 0.2);
     padding: 1rem;
-    width: 300px;
+    width: 250px;
     border-radius: 8px;
     z-index: 1000;
 }
@@ -169,9 +169,27 @@ header {
     gap: 8px;
 }
 
+.submit-project-btn, .submit-task-btn {
+    padding: 2px 10px;
+    border: none;
+    border-radius: 6px;
+    transition: opacity 0.3s;
+    width: fit-content;
+    font-size: 1rem;
+    transition: opacity 0.4s ease;
+}
+
+.submit-project-btn:hover, .submit-task-btn:hover {
+    opacity: 0.7;
+}
+
+.project-modal-title {
+    margin: 0;
+}
+
 #projectName {
     padding: 4px 6px;
-    width: 100%;
+    /* width: 100%; */
     border: 1px solid #cacaca;
     border-radius: 6px;
     font-size: 13px;
@@ -246,10 +264,16 @@ header {
     border: none;
     border-radius: 5px;
     padding: 12px;
-    background-color: white;
+    background: none;
     font-weight: bolder;
-    color: black;
+    color: var(--custom-white);
     margin: 0;
+    transition: background-color 0.5s ease, font-size 0.5s ease;
+}
+
+.close-project-dialog-btn:hover, .close-task-dialog-btn:hover {
+    background-color: rgba(169, 169, 169, 0.304);
+    font-size: 0.9rem;
 }
 
 .project-container {
