--- a/src/styles.css
+++ b/src/styles.css
@@ -184,6 +184,7 @@ header {
 
 .submit-project-btn, .submit-task-btn {
     padding: 2px 10px;
+    background-color: white;
     border: none;
     border-radius: 6px;
     transition: opacity 0.3s;
@@ -350,13 +351,15 @@ header {
 
 .tasks-container {
     display: flex;
+    gap: 20px;
     flex-wrap: wrap;
 }
 
 .task {
     border: 0.5px solid var(--custom-white);
     border-radius: 15px;
-    box-shadow: 1px 2px 1px 1px var(--custom-white);
+    box-shadow: 0 3px 6px rgba(255, 255, 255, 0.25), 
+    0 1px 3px rgba(255, 255, 255, 0.15);
     background-color: rgb(30, 30, 30);
     color: var(--custom-white);
     padding: 20px;
@@ -378,6 +381,10 @@ header {
     background-color: white;
     appearance: none;
     display: inline-block;
+}
+
+.taskCheckBox:hover {
+    cursor: pointer;
 }
 
 .taskCheckBox:focus {
@@ -414,9 +421,17 @@ header {
 }
 
 .task-buttons-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     pointer-events: auto;
     filter: none;
     opacity: 1 !important;
+}
+
+.edit-delete-btns-container {
+    display: flex;
+    gap: 10px;
 }
 
 .task.disabled {
@@ -433,6 +448,10 @@ header {
     font-family: "Inter-Bold", Arial, Helvetica, sans-serif;
 }
 
+#taskTitle {
+    color: black;
+}
+
 .taskDescription {
     font-size: 14px;
 }
@@ -441,6 +460,7 @@ header {
     border: 1px solid #cacaca;
     border-radius: 6px;
     font-size: 13px;
+    color: black;
 }
 
 #taskDescription:focus {
@@ -452,7 +472,22 @@ header {
     gap: 8px;
 }
 
+.taskProject {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    padding: 3px 10px;
+    background-color: #C1CAFF;
+    color: black;
+    font-size: 13px;
+    border-radius: 10px;
+}
+
 .taskPriority {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: fit-content;
     padding: 3px 10px;
     border-radius: 15px;
@@ -469,6 +504,9 @@ header {
 }
 
 .taskDueDate {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: fit-content;
     padding: 3px 10px;
     border-radius: 10px;
