Changing the way dueDates work and still trying to fix sortByDueDate

--- a/src/styles.css
+++ b/src/styles.css
@@ -432,6 +432,7 @@ header {
     pointer-events: auto;
     filter: none;
     opacity: 1 !important;
+    margin-top: auto;
 }
 
 .edit-delete-btns-container {
