--- a/src/styles.css
+++ b/src/styles.css
@@ -361,6 +361,9 @@ header {
 }
 
 .task {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     border: 0.5px solid var(--custom-white);
     border-radius: 15px;
     box-shadow: 0 3px 6px rgba(255, 255, 255, 0.25), 
